Implemented drawing triangles