@@ -16,8 +16,13 @@ jar {
     }
 
 
-    dependencies {
-        testImplementation(platform("org.junit:junit-bom:5.9.1"))
-        testImplementation("org.junit.jupiter:junit-jupiter")
-    }
+
+}
+dependencies {
+    testImplementation(platform("org.junit:junit-bom:5.9.1"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
+}
+test {
+  //  jvmArgs '--enable-preview'
+    useJUnitPlatform()
 }
